[gd_scene load_steps=4 format=3 uid="uid://dkum5bskrgt8k"]

[ext_resource type="Script" path="res://Fight/Scripts/affichage_stats.gd" id="1_q6wx5"]
[ext_resource type="Texture2D" uid="uid://dk2x644kiyu40" path="res://UI/Displays/small_stats_fight.png" id="1_x2tj2"]

[sub_resource type="LabelSettings" id="LabelSettings_1gmjt"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[node name="AffichageStats" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_x2tj2")
script = ExtResource("1_q6wx5")

[node name="Stats" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 9.0
offset_right = 350.0
offset_bottom = 87.0
theme_override_constants/h_separation = 21
theme_override_constants/v_separation = 9
columns = 6

[node name="HP" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0/0"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="PA" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "6"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="PM" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "3
"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="Ini" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="PO" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "+0"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="CC" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="DommageAir" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="DommageTerre" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="DommageFeu" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="DommageEau" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="Blocage" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="Soins" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="ResitanceAir" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="ResistanceTerre" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="ResistanceFeu" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="ResistanceEau" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="Esquive" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1

[node name="Renvoi" type="Label" parent="Stats"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "0%"
label_settings = SubResource("LabelSettings_1gmjt")
vertical_alignment = 1
